# transcriber

./: .claude-plan.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  handoff.md  head of ai 4-3.vedproj  head of ai 4-8.vedproj  launch_gui.bat  launch_gui.command  pyproject.toml  requirements.txt
packaging/macos/: build_app.py
test/: 1.vedproj  2.vedproj
video_editor/: __init__.py  __main__.py  analyzer.py  captioner.py  config.py  cutter.py  encoder.py  environment.py  gui_main.py  main.py  qc.py  runtime_paths.py  transcriber.py
video_editor/gui/: __init__.py  caption_settings.py  main_window.py  models.py  segment_item.py  settings_dialog.py  timeline.py  transcript_editor.py  video_player.py
video_editor/gui/recorder/: __init__.py  audio_level_meter.py  ffmpeg_recorder.py  ffmpeg_worker.py  macos_native_recorder.py  macos_permissions.py  macos_system_audio_helper.swift  recorder_tab.py  recording_controller.py  recording_preview.py  recording_settings.py
